# viewspec

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  pretext-e2e.yml
conformance/refinement/: correction-proof-v1.json  corrections.json  gate-status-v1.json  negative-corpus.json  scorecard-v1.json  scorecard-v2.json  verification-report-v2.json
conformance/verification/: corpus.json
demos/: CNAME  SPEC-DEMO-FIFTEEN-LINES.md  SPEC-DEMO-INVARIANTS.md  SPEC-DEMO-LANDING.md  SPEC-DEMO-LIVE-BUILDER.md  SPEC-DEMO-MOTIF-SWITCHER.md  SPEC-DEMO-PROVENANCE-INSPECTOR.md  agent-app-bundle.schema.json  agent-app-example.internal-tool.json  agent-assets.json  agent-intent-bundle.schema.json  agent-intent-example.dashboard.json  agent-system-prompt.txt  build_aesthetic_profiles.py  build_fifteen_lines.py  build_invariants.py  build_landing.py  build_live_builder.py  build_motif_switcher.py  build_provenance_inspector.py  build_stateful_collections.py  build_style_derivation.py  build_style_range.py  converge-task-example.dashboard.json  converge-task.schema.json  index.html  intent-patch-example.dashboard.json  intent-patch.schema.json  llms-full.txt  llms.txt  openapi.json  public-facts.json  robots.txt  seo_metadata.py  serve.py  sitemap.xml
demos/aesthetic-profiles/: index.html
demos/appbundle-state-ir/: index.html
demos/cross-platform-dashboard/: index.html
demos/custom-motifs/: index.html
demos/fifteen-lines/: index.html
demos/interactive-compose/: index.html
docs/: agent-integration.md  app-bundle-v0.md  bug-prevention.md  compatibility.md  converge-sessions-v1.md  core-refinement-goal.md  custom-motif-authoring.md  emitter-matrix.md  free-sdk-reliability.md  getting-started.md  hosted-agent-integration.md  intent-patch-v1.md  interactive-compose.md  known-limits-a11y.md  known-limits-flutter.md  known-limits-html-tailwind.md  known-limits-react-tailwind-tsx.md  known-limits-react-tsx.md  known-limits-swiftui.md  launch-browser-qa-report.md  launch-demo-storyboard.md  launch-headliner-asset.md  local-html-wedge.md  manifest-v1.schema.json  mobile-recorder-handoff.md  proof-bundle.md  release-checklist.md  viewspec-review.md
examples/: comparison_view.py  emit_html.py  invoice_table.py  kpi_dashboard.py  raw_html_DESIGN.md  raw_html_report.html
scripts/: check_distribution.py  run_refinement_corrections.py  run_verification_corpus.py
tests/: bug_prevention_manifest.json  checkout_claim_smoke.mjs  commercial_contract_smoke.mjs  landing_compile_smoke.mjs  landing_config_smoke.mjs  landing_payload_smoke.mjs  seo_static_smoke.mjs  test_a11y.py  test_a11y_react.py  test_aesthetic_vocabulary.py  test_agent.py  test_app_bundle.py  test_app_freerange.py  test_app_freerange_public.py  test_app_numeric.py  test_app_pretext.py  test_app_pretext_e2e.py  test_app_pretext_public.py  test_app_pretext_runtime.py  test_app_shell_state_runtime.py  test_app_visibility.py  test_bug_prevention_manifest.py  test_check_side_validators.py  test_compiler.py  test_compiler_benchmarks.py  test_conformance_corpus.py  test_converge_cli.py  test_converge_sessions.py  test_converge_tools.py  test_convergence.py  test_demo_build_drift.py  test_design_sdk.py  test_distribution_artifacts.py  test_distribution_metadata.py  test_emitter_contract.py  test_error_code_registry.py  test_examples.py  test_hash_goldens.py  test_host_verify.py  test_hosted_app_bundles.py  (+39 more)
(+189 files in other folders)
