[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viewspec"
version = "0.2.0"
description = "Universal UI from semantic data. Describe what your data means — the compiler figures out how it looks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nigel Robinson" },
]
keywords = ["ui", "compiler", "semantic", "viewspec", "composition-ir", "protobuf", "declarative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27.0",
]
remote = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/nxrobins/viewspec"
Repository = "https://github.com/nxrobins/viewspec"
Issues = "https://github.com/nxrobins/viewspec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/viewspec"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/viewspec/schema/viewspec_pb2.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
