[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viewspec"
version = "0.3.0b1"
description = "Agent-native UI compiler. Agents describe intent; ViewSpec compiles concrete UI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nigel Robinson" },
]
keywords = ["ui", "compiler", "semantic", "viewspec", "composition-ir", "protobuf", "declarative", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "protobuf>=5.0",
    "PyYAML>=6.0",
]

[project.scripts]
viewspec = "viewspec.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27.0",
    "jsonschema>=4.18",
]
remote = [
    "httpx>=0.27.0",
]
agents = [
    "mcp>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/nxrobins/viewspec"
Repository = "https://github.com/nxrobins/viewspec"
Issues = "https://github.com/nxrobins/viewspec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/viewspec"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/viewspec/schema/viewspec_pb2.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
